# bevy_mod_js_scripting

./: .editorconfig  Cargo.toml  LICENSE.md  README.md  lib.bevy.d.ts  run-example-web.sh  tsconfig.json
assets/scripts/: breakout.ts  debug.js  debug.ts  headless.ts
examples/: breakout.rs  headless.rs
src/: asset.rs  dynamic_query.rs  lib.rs  runtime.rs  transpile.rs  ts_to_js.rs
src/runtime/: ecs.rs  log.rs  mod.rs  native.rs  ops.rs  types.rs  wasm.rs
src/runtime/ecs/: mod.rs  query.rs  resource.rs  types.rs  v8_utils.rs  value.rs
src/runtime/js/: ecs.js  index.d.ts  log.js  native_setup.js  types.ts  wasm_setup.js
src/runtime/native/: log.rs  mod.rs  native_setup.js
src/runtime/native/ecs/: call.rs  info.rs  mod.rs  query.rs  resource.rs  value.rs
src/runtime/ops/: ecs.rs  log.rs
src/runtime/ops/ecs/: component.rs  ecs.js  info.rs  mod.rs  query.rs  resource.rs  types.rs  value.rs  world.rs
src/runtime/wasm/: log.rs  mod.rs  types.rs  wasm_setup.js
src/runtime/wasm/ecs/: info.rs  mod.rs  query.rs  resource.rs  value.rs
types/: bevy_types.js  bevy_types.ts  lib.bevy.d.ts
wasm_resources/: index.html
