[package]
name = "bevy_mod_js_scripting"
version = "0.1.0"
edition = "2021"

[features]
default = ["typescript"]
typescript = [
  "deno_ast"
]

[dependencies]
anyhow = "1.0.57"
bevy = { version = "0.8.0", default-features = false, features = ["bevy_asset"] }
bevy_reflect = "0.8.0-dev"
fixedbitset = "0.4"

deno_core = "0.146.0"
deno_ast = { version = "0.17.0", features = ["transpiling"], optional = true }
serde = "1.0"
serde_json = "1.0"

bevy_ecs_dynamic = { git = "https://github.com/jakobhellermann/bevy_ecs_dynamic" }
bevy_reflect_fns = { git = "https://github.com/jakobhellermann/bevy_reflect_fns" }

[dev-dependencies]
bevy = { version = "0.8.0", default-features = false, features = ["render", "bevy_winit", "x11", "filesystem_watcher"] }
